--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
+  "homepage": "http://jessburnett.github.io/portfolio-gh",
   "name": "portfolio-gh",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^2.1.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -21,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
